--- a/mypy.ini
+++ b/mypy.ini
@@ -1,5 +1,5 @@
 [mypy]
-# Global mypy configuration for DesiLang
+# Global mypy configuration for MeriLang
 
 # Type checking strictness
 python_version = 3.10
@@ -32,27 +32,27 @@ ignore_missing_imports = True
 [mypy-setuptools.*]
 ignore_missing_imports = True
 
-[mypy-desilang.lexer]
+[mypy-MeriLang.lexer]
 # Legacy lexer - gradually migrate to lexer_enhanced
 disallow_untyped_defs = False
 
-[mypy-desilang.parser]
+[mypy-MeriLang.parser]
 # Parser will be upgraded in Phase 2
 disallow_untyped_defs = False
 
-[mypy-desilang.interpreter]
+[mypy-MeriLang.interpreter]
 # Interpreter will be upgraded in Phase 2
 disallow_untyped_defs = False
 
 # New production modules - strict checking
-[mypy-desilang.lexer_enhanced]
+[mypy-MeriLang.lexer_enhanced]
 disallow_untyped_defs = True
 warn_return_any = True
 
-[mypy-desilang.environment]
+[mypy-MeriLang.environment]
 disallow_untyped_defs = True
 warn_return_any = True
 
-[mypy-desilang.errors_enhanced]
+[mypy-MeriLang.errors_enhanced]
 disallow_untyped_defs = True
 warn_return_any = True
