--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -29,7 +29,7 @@ jobs:
 
       - name: Run tests
         run: |
-          pytest --cov=desilang --cov-report=xml --cov-report=term
+          pytest --cov=MeriLang --cov-report=xml --cov-report=term
 
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v3
